// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmBtn allows for customization 1`] = `
<button
  class="tm-btn"
>
  <span
    class="tm-btn__container tm-btn__icon-right tm-btn--size-sm tm-btn--danger"
  >
    <!---->
    <span
      class="tm-btn__value"
    >
      button
    </span>
  </span>
</button>
`;

exports[`TmBtn displays as a link 1`] = `
<router-link
  exact="exact"
  to="/stake"
>
  
  button

</router-link>
`;

exports[`TmBtn displays as an external link 1`] = `
<a>
  <span
    class="tm-btn__container"
  >
    <!---->
    <span
      class="tm-btn__value"
    >
      button
    </span>
  </span>
</a>
`;

exports[`TmBtn displays as an icon 1`] = `
<button
  class="tm-btn"
>
  <span
    class="tm-btn__container"
  >
    <i
      aria-hidden="true"
      class="tm-btn__icon material-icons"
    >
      
      search 
    </i>
    <span
      class="tm-btn__value"
    >
      button
    </span>
  </span>
</button>
`;

exports[`TmBtn displays as an img as an icon 1`] = `
<button
  class="tm-btn"
>
  <span
    class="tm-btn__container"
  >
    <!---->
    <span
      class="tm-btn__value"
    >
      button
    </span>
  </span>
</button>
`;

exports[`TmBtn has the expected html structure 1`] = `
<button
  class="tm-btn"
>
  <span
    class="tm-btn__container"
  >
    <!---->
    <span
      class="tm-btn__value"
    >
      button
    </span>
  </span>
</button>
`;
